# plates-store

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docker/postgres/: add_test_user.sh
src/application/: container.py  flask_app.py  flask_commands.py
src/domain/: entities.py  repositories.py  services.py
src/infrastructure/: orm.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_api.py  test_plates_store_service.py  test_sqlalchemy_repository.py
tests/unit/: test_license_plate.py  test_plates_store.py
