[tool.poetry]
name = "plates-store"
version = "0.1.0"
description = "Backend application for storing and retrieving German license plates."
authors = ["Mikołaj 'Nick' Żyłkowski <mzylkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
safety = "^2.1.1"
mypy = "^0.971"
flake8-pytest-style = "^1.6.0"
types-requests = "^2.28.9"
freezegun = "^1.2.2"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.40"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "src/__version__.py",
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.mypy]
strict = true
plugins = "sqlalchemy.ext.mypy.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
